@@ -1,5 +1,6 @@
 0.8.2
 - Fix SHA3 partial updates calculations.
+- Make ChaCha20 processing fast again.
 
 0.8.1
 - Adds Data(hex:) helper.
